[project]
name = "eth-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaleido>=1.1.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.18",
]
